%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: SoldierAnimController
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: walking
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: died
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: attacking
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110237585}
  m_DstState: {fileID: 110257317}
  m_TransitionDuration: .11999999
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: walking
    m_EventTreshold: 0
    m_ExitTime: .879999995
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110101310
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110237585}
  m_DstState: {fileID: 110248530}
  m_TransitionDuration: .11999999
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: died
    m_EventTreshold: 0
    m_ExitTime: .879999995
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110102006
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110257317}
  m_DstState: {fileID: 110248530}
  m_TransitionDuration: .299999982
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: died
    m_EventTreshold: 0
    m_ExitTime: .700000048
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110118759
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110257317}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .299999982
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: attacking
    m_EventTreshold: 0
    m_ExitTime: .700000048
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110119120
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110248530}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: died
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110137504
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110257317}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110142047
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110237585}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: attacking
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110149029
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110257317}
  m_DstState: {fileID: 110237585}
  m_TransitionDuration: .299999982
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: walking
    m_EventTreshold: 0
    m_ExitTime: .700000048
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110177686
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110237585}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .11999999
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: attacking
    m_EventTreshold: 0
    m_ExitTime: .879999995
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 426ab99cbcedc4dda82409beb013de34, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -252, y: -24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110237585
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 426ab99cbcedc4dda82409beb013de34, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 60, y: -120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110248530
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Death
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 426ab99cbcedc4dda82409beb013de34, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 12, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110257317
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400008, guid: 426ab99cbcedc4dda82409beb013de34, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 276, y: -24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110237585}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110248530}
  - {fileID: 110237585}
  - {fileID: 110257317}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110257317}
      second:
      - {fileID: 110149029}
      - {fileID: 110102006}
      - {fileID: 110118759}
    data:
      first: {fileID: 110237585}
      second:
      - {fileID: 110100000}
      - {fileID: 110101310}
      - {fileID: 110177686}
    data:
      first: {fileID: 110248530}
      second: []
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110119120}
      - {fileID: 110142047}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -192, y: -192, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
